# Amazon

./: .gitignore  AIplayer.cpp  AIplayer.h  Amazons(2).docx  CMakeLists.txt  Humanplayer.cpp  Humanplayer.h  README.md  board.cpp  board.h  bot_for_upload.cpp  filemanage.cpp  filemanage.h  game.cpp  merge.py  move.cpp  move.h  player.h  position.cpp  position.h  test.cpp  大作业实验报告.docx
app/: game.cpp
bot/: bot.cpp
gui/: BoardDrawer.cpp  BoardDrawer.h  Highlight.cpp  Highlight.h  PieceDrawer.cpp  PieceDrawer.h  button.cpp  button.h  gui.cpp
src/: AIplayer.cpp  AIplayer.h  Humanplayer.h  board.cpp  board.h  filemanage.cpp  filemanage.h  move.cpp  move.h
test/: test.cpp  test_standards.h
